--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,23 @@ body {
 #intro {
     margin-top: 2%;
 }
+#email a {
+    color: rgb(0, 159, 187);
+}
+a:hover {
+    opacity: 0.8;
+}
 .footer {
     border-bottom: solid 3px #ccc;
 }
 h1 {
-    font-size: 4em;
+    font-size: 5em;
+    text-align: center;
+    margin-bottom: 0.2em;
 }
-a {
-    color: black;
+h2 {
+    text-align: center;
+    line-height: 1.4em;
 }
 .logo {
     height: 30px;
@@ -36,11 +45,11 @@ header ul {
     margin-bottom: 10px;
 }
 header li {
-    font-size: 18px;
+    font-size: 1.5em;
     font-weight: 700;
 }
 header li:nth-child(n+2) {
-    font-size: 14px;
+    font-size: 1em;
     margin-left: 40px;
 }
 header li:first-child {
@@ -89,7 +98,7 @@ ul {
     margin: 0;
 }
 .footer {
-    font-size: 20px;
+    font-size: 1em;
 }
 .footer ul {
     display: flex;
@@ -149,8 +158,8 @@ ul {
     width: 100%;
 }
 .boxes li:nth-child(1) {
-        grid-column: 1 / -1;
-        grid-row: span 3;
+    grid-column: 1 / -1;
+    grid-row: span 3;
 }
 .boxes li:nth-child(2) {
     grid-column: span 2;
@@ -169,8 +178,9 @@ ul {
     grid-column: span 2;
     grid-row: span 2;
 }
-/* Homepage 992px */
-@media screen and (max-width: 692px) {
+
+/* Homepage 980px */
+@media screen and (max-width: 980px) {
     .boxes li:nth-child(1) {
         grid-column: span 6;
         grid-row: span 4;
@@ -194,5 +204,14 @@ ul {
     .boxes li:nth-child(6) {
         grid-column: span 6;
         grid-row: span 4;
+    }
+    h1 {
+        font-size: 8em;
+    }
+    h2 {
+        font-size: 3em;
+    }
+    #email {
+        margin-bottom: 200px;
     }
 }
