--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ ul {
 .boxes li:nth-child(2) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
-        url(/img/4.webp);
+        url(/img/9.png);
 }
 .boxes li:nth-child(3) {
     background-image:
