--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ nav img {
 .skill {
     height: 5em;
 }
+#me {
+    width: 200px;
+    border-radius: 50%;
+}
 .skills-used-container img {
     height: 5em;
     margin: 1em 1em 0 0;
@@ -224,12 +228,12 @@ ul {
 .boxes li:nth-child(8) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
-        url(/img/default.webp);
+        url(/img/Flights/1.png);
 }
 .boxes li:nth-child(9) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
-        url(/img/Yoga/1.png);
+        url(/img/Yoga/logo1.png);
 }
 .boxes div a {
     height: 100%;
