--- a/css/main.css
+++ b/css/main.css
@@ -181,86 +181,76 @@ ul {
 .boxes li:nth-child(1) {
     grid-column: span 6;
     grid-row: span 4;
-}
-.boxes li:nth-child(2) {
-    grid-column: span 2;
-    grid-row: span 2;
-}
-.boxes li:nth-child(3) {
-    grid-column: span 2;
-    grid-row: span 2;
-}
-.boxes li:nth-child(4) {
-    grid-column: span 2;
-    grid-row: span 2;
-}
-.boxes li:nth-child(5) {
-    grid-column: span 6;
-    grid-row: span 4;
-}
-.boxes li:nth-child(6) {
-    grid-column: span 3;
-    grid-row: span 4;
-}
-.boxes li:nth-child(6) {
-    grid-column: span 3;
-    grid-row: span 4;
-}
-.boxes li:nth-child(7) {
-    grid-column: span 3;
-    grid-row: span 3;
-}
-.boxes li:nth-child(8) {
-    grid-column: span 3;
-    grid-row: span 4;
-}
-.boxes li:nth-child(1) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/1.png);
 }
 .boxes li:nth-child(2) {
+    grid-column: span 2;
+    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/2.png);
 }
 .boxes li:nth-child(3) {
+    grid-column: span 2;
+    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/3.png);
 }
 .boxes li:nth-child(4) {
+    grid-column: span 2;
+    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/4.png);
 }
 .boxes li:nth-child(5) {
+    grid-column: span 6;
+    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Gessle/1.png);
 }
 .boxes li:nth-child(6) {
+    grid-column: span 3;
+    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Soundable/mobile.png);
 }
 .boxes li:nth-child(7) {
+    grid-column: span 3;
+    grid-row: span 3;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Scope/logo.png);
     background-position: center;
 }
 .boxes li:nth-child(8) {
+    grid-column: span 3;
+    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Flights/4.png);
-        background-position: center;
+    background-position: center;
 }
 .boxes li:nth-child(9) {
+    grid-column: span 3;
+    grid-row: span 3;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Yoga/7.png);
         background-position: center;
+}
+.boxes li:nth-child(10) {
+    grid-column: span 6;
+    grid-row: span 4;
+    background-image:
+        linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
+        url(/img/Soakage/hello.png);
+    background-position: center left;
 }
 .boxes div a {
     height: 100%;
