--- a/css/main.css
+++ b/css/main.css
@@ -164,93 +164,76 @@ ul {
 }
 .boxes {
     display: grid;
-    grid-auto-rows: minmax(125px, auto);
-    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(90px, auto);
+    grid-template-columns: repeat(12, 1fr);
     grid-gap: 5px;
 }
 .boxes li {
+    grid-column: span 12;
+    grid-row: span 2;
     background-size: cover;
     display: flex;
     align-items: flex-end;
-    grid-column: span 3;
-    grid-row: span 3;
-    background-image:
-        linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
-        url(/img/default.webp);
 }
 .boxes li:nth-child(1) {
-    grid-column: span 6;
-    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/1.png);
+    background-position: center;
 }
 .boxes li:nth-child(2) {
-    grid-column: span 2;
-    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/2.png);
+    background-position: center;
 }
 .boxes li:nth-child(3) {
-    grid-column: span 2;
-    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/3.png);
+    background-position: center;
 }
 .boxes li:nth-child(4) {
-    grid-column: span 2;
-    grid-row: span 2;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/4.png);
+    background-position: center;
 }
 .boxes li:nth-child(5) {
-    grid-column: span 6;
-    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Gessle/1.png);
+    background-position: center;
 }
 .boxes li:nth-child(6) {
-    grid-column: span 3;
-    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Soundable/mobile.png);
+    background-position: center;
 }
 .boxes li:nth-child(7) {
-    grid-column: span 3;
-    grid-row: span 3;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Scope/logo.png);
     background-position: center;
 }
 .boxes li:nth-child(8) {
-    grid-column: span 3;
-    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Flights/4.png);
     background-position: center;
 }
 .boxes li:nth-child(9) {
-    grid-column: span 3;
-    grid-row: span 3;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Yoga/7.png);
         background-position: center;
 }
 .boxes li:nth-child(10) {
-    grid-column: span 6;
-    grid-row: span 4;
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Soakage/hello.png);
-    background-position: center left;
+    background-position: center;
 }
 .boxes div a {
     height: 100%;
@@ -261,45 +244,84 @@ ul {
     height: 100%;
     width: 100%;
 }
-/* Homepage 980px */
-@media screen and (max-width: 980px) {
+/* Homepage 500px */
+@media screen and (min-width: 500px) {
+    .boxes {
+        display: grid;
+        grid-auto-rows: minmax(175px, auto);
+        grid-template-columns: 10%;
+        grid-gap: 5px;
+    }
+    .boxes li:nth-child(2) {
+        grid-column: span 4;
+        grid-row: span 1;
+    }
+    .boxes li:nth-child(3) {
+        grid-column: span 4;
+        grid-row: span 1;
+    }
+    .boxes li:nth-child(4) {
+        grid-column: span 4;
+        grid-row: span 1;
+    }   
+/* Homepage 900px */
+@media screen and (min-width: 900px) {
     .boxes {
         display: grid;
         grid-auto-rows: minmax(125px, auto);
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 5px;
     }
-    .boxes li:nth-child(1) {
+    .boxes li {
         grid-column: span 6;
         grid-row: span 4;
     }
+    .boxes li:nth-child(1) {
+        grid-column: 1/7;
+        grid-row: 1/5;
+    }
     .boxes li:nth-child(2) {
-        display: none;
+        grid-column: 1/3;
+        grid-row: 5/6;
     }
     .boxes li:nth-child(3) {
-        display: none;
+        grid-column: 3/5;
+        grid-row: 5/6;
     }
     .boxes li:nth-child(4) {
-        display: none;
-    }
+        grid-column: 5/7;
+        grid-row: 5/6;
+    }   
     .boxes li:nth-child(5) {
         grid-column: span 6;
         grid-row: span 4;
     }
     .boxes li:nth-child(6) {
-        grid-column: span 6;
+        grid-column: span 3;
         grid-row: span 4;
     }
     .boxes li:nth-child(7) {
-        grid-column: span 6;
-        grid-row: span 4;
+        grid-column: span 3;
+        grid-row: span 3;
     }
     .boxes li:nth-child(8) {
-        grid-column: span 6;
+        grid-column: 4/7;
         grid-row: span 4;
     }
     .boxes li:nth-child(9) {
-        grid-column: span 6;
-        grid-row: span 4;
+        grid-column: span 3;
+        grid-row: span 3;
     }
 }
+
+
+/* Test
+
+    .boxes {
+        display: grid;
+        grid-auto-rows: minmax(125px, auto);
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 5px;
+    }
+
+*/
