--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     max-width: 900px;
-    margin: 100px auto;
+    margin: 20px auto;
 }
 .boxes img {
     width: 100%;
@@ -23,6 +23,9 @@ body {
 }
 nav img {
     height: 1em;
+}
+nav {
+    margin: 0 20px;
 }
 #email {
     text-align: center;
@@ -77,7 +80,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    line-height: 2em;
+    margin: 20px 0 10px 0;
 }
 .main-text-container {
     margin: 10px 0px;
@@ -85,14 +88,11 @@ h1 {
 p {
     font-size: 1em;
     line-height: 1.5em;
-    width: 48%;
 }
 .single-text {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    flex-flow: row nowrap;
+    flex-direction: column;
 }
 header ul {
     display: flex;
@@ -264,6 +264,16 @@ ul {
         grid-column: span 4;
         grid-row: span 1;
     }   
+    body {
+        margin: 50px auto;
+    }
+    .single-text {
+        flex-direction: row;
+    }
+    .single-text p {
+        margin: 10px;
+    }
+
 /* Homepage 900px */
 @media screen and (min-width: 900px) {
     .boxes {
@@ -311,6 +321,16 @@ ul {
     .boxes li:nth-child(9) {
         grid-column: span 3;
         grid-row: span 3;
+    }
+    body {
+        margin: 100px auto;
+    }
+    nav {
+        margin: 0;
+    }
+    .single-text p {
+        margin: 0px;
+        width: 48%;
     }
 }
 
