--- a/css/main.css
+++ b/css/main.css
@@ -186,18 +186,21 @@ ul {
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/2.png);
     background-position: center;
+    display: none;
 }
 .boxes li:nth-child(3) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/3.png);
     background-position: center;
+    display: none;
 }
 .boxes li:nth-child(4) {
     background-image:
         linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)),
         url(/img/Kanye/4.png);
     background-position: center;
+    display: none;
 }
 .boxes li:nth-child(5) {
     background-image:
@@ -255,14 +258,17 @@ ul {
     .boxes li:nth-child(2) {
         grid-column: span 4;
         grid-row: span 1;
+        display: block;
     }
     .boxes li:nth-child(3) {
         grid-column: span 4;
         grid-row: span 1;
+        display: block;
     }
     .boxes li:nth-child(4) {
         grid-column: span 4;
         grid-row: span 1;
+        display: block;
     }   
     body {
         margin: 50px auto;
