--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ h1 {
     margin: 20px 0 10px 0;
 }
 .main-text-container {
-    margin: 10px 0px;
+    margin: 10px 20px;
 }
 p {
     font-size: 1em;
@@ -330,12 +330,14 @@ ul {
         grid-row: span 3;
     }
     body {
-        margin: 100px auto;
+        margin: 70px auto;
     }
     nav {
         margin: 0;
     }
-
+    .main-text-container {
+        margin: 10px 0px;
+    }
 }
 
 
