--- a/css/main.css
+++ b/css/main.css
@@ -36,10 +36,9 @@ nav {
     text-align: center;
 }
 .skills-container p {
-    background: rgb(48, 48, 48);
-    width: 100%;
+    background: rgb(223, 223, 223);
     display: inline;
-    color: white;
+    color: black;
     padding: 5px;
     line-height: 40px;
 }
